err/mode.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mode'...
Compiling './lib/python3.5/site-packages/mode/__init__.py'...
***   File "./lib/python3.5/site-packages/mode/__init__.py", line 21
    major: int
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mode/loop'...
Compiling './lib/python3.5/site-packages/mode/loop/__init__.py'...
***   File "./lib/python3.5/site-packages/mode/loop/__init__.py", line 56
    LOOPS: Mapping[str, str] = {
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/loop/gevent.py'...
***   File "./lib/python3.5/site-packages/mode/loop/gevent.py", line 41
    _loop: asyncio.AbstractEventLoop = None
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/services.py'...
***   File "./lib/python3.5/site-packages/mode/services.py", line 29
    abstract: ClassVar[bool] = True
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/supervisors.py'...
***   File "./lib/python3.5/site-packages/mode/supervisors.py", line 20
    _please_wakeup: asyncio.Future
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/types.py'...
***   File "./lib/python3.5/site-packages/mode/types.py", line 13
    flags: Set[str]
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mode/utils'...
Compiling './lib/python3.5/site-packages/mode/utils/debug.py'...
***   File "./lib/python3.5/site-packages/mode/utils/debug.py", line 53
    self.timeout: float = want_seconds(timeout)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mode/utils/graphs'...
Compiling './lib/python3.5/site-packages/mode/utils/graphs/formatter.py'...
***   File "./lib/python3.5/site-packages/mode/utils/graphs/formatter.py", line 42
    scheme: Mapping[str, Any] = {
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/graphs/graph.py'...
***   File "./lib/python3.5/site-packages/mode/utils/graphs/graph.py", line 27
    adjacent: MutableMapping
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/logging.py'...
***   File "./lib/python3.5/site-packages/mode/utils/logging.py", line 21
    DEVLOG: bool = bool(os.environ.get('DEVLOG', ''))
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/objects.py'...
***   File "./lib/python3.5/site-packages/mode/utils/objects.py", line 26
    SET_TYPES: Tuple[Type, ...] = (AbstractSet, FrozenSet, MutableSet, Set)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/times.py'...
***   File "./lib/python3.5/site-packages/mode/utils/times.py", line 59
    rate: float
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/trees.py'...
***   File "./lib/python3.5/site-packages/mode/utils/trees.py", line 36
    _root: NodeT = None
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mode/utils/types'...
Compiling './lib/python3.5/site-packages/mode/utils/types/graphs.py'...
***   File "./lib/python3.5/site-packages/mode/utils/types/graphs.py", line 9
    scheme: Mapping[str, Any]
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/utils/types/trees.py'...
***   File "./lib/python3.5/site-packages/mode/utils/types/trees.py", line 9
    root: 'NodeT'
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mode/worker.py'...
***   File "./lib/python3.5/site-packages/mode/worker.py", line 35
    stdout: IO
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mode-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/t'...
Listing './lib/python3.5/site-packages/t/functional'...
Listing './lib/python3.5/site-packages/t/functional/utils'...
Listing './lib/python3.5/site-packages/t/unit'...
Listing './lib/python3.5/site-packages/t/unit/utils'...
Listing './share'...
Listing './share/python-wheels'...
